Fix improve button overlap

--- a/client/src/less/styles.less
+++ b/client/src/less/styles.less
@@ -439,7 +439,6 @@ ul.menu a:hover .fa.fa-file {
 }
 #content {
   a.btn.github-fork{
-    z-index: 100;
     position: absolute;
     top: 3px;
     right: 15px;
